fixed spacings inside projects pages

--- a/src/components/ProjectPageTemplate/index.css
+++ b/src/components/ProjectPageTemplate/index.css
@@ -47,6 +47,7 @@ h6 {
 p {
     font-size: 1rem;
     line-height: 1.6;
+    margin-bottom: 1.6em;
 }
 
 @media (max-width: 768px) {
